# Lumino.Core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build_vs2013/: LuminoCore.sln
build_vs2013/LuminoCore/: LuminoCore.vcxproj  LuminoCore.vcxproj.filters
build_vs2013/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters
cmake/: LNCommon.cmake
doc/src/: Doxyfile
doc/src/src/: DevGuide1.h  MainPage.h
include/: LuminoCore.h  LuminoMath.h
include/Lumino/Base/: Array.h  Array.inl  BindingSupport.h  ByteBuffer.h  CRT.h  Cache.h  Collection.h  Common.h  Delegate.h  Delegate.inl  DllLoader.h  ElapsedTimer.h  Enum.h  EnumExtension.h  Enumerable.h  Environment.h  Event.h  Event.inl  Exception.h  Formatter.h  Hash.h  List.h  List.inl  Locale.h  Logger.h  Memory.h  NonCopyable.h  Nullable.h  Point.h  Queue.h  Rect.h  RefBuffer.h  RefObject.h  Regex.h  Resource.h  STLUtils.h  Serialization.h  Size.h  SortedArray.h  Stack.h  (+11 more)
include/Lumino/DataModel/: Event.h
include/Lumino/IO/: ASyncIOObject.h  AsyncIOTask.h  BinaryReader.h  BinaryWriter.h  Common.h  Console.h  (+19 more)
src/: Internal.h  LuminoCore.PCH.h
src/Base/: ByteBuffer.cpp  Cache.cpp  DBCSEncoding.h  DllLoader.cpp  ElapsedTimer.cpp  Encoding.cpp  EncodingDetector.cpp  EncodingDetector.h  Environment.cpp  Exception.cpp  Hash.cpp  Locale.cpp  Logger.cpp  Memory.cpp  Point.cpp  Rect.cpp  RefObject.cpp  Resource.cpp  SJISConvertTable.c  Size.cpp  String.cpp  StringBuilder.cpp  StringHelper.cpp  StringRef.cpp  StringTraits.cpp  StringUtils.cpp  Thickness.cpp  UnicodeUtils.cpp  Version.cpp
src/Fluorite/: Combinators.h  Common.h  Context.cpp  DiagnosticsManager.cpp  DiagnosticsManager.h  EntityDatabase.cpp  Token.h  TokenBuffer.cpp  UnitFile.cpp
src/IO/: Archive.cpp  Archive.h  ArchiveMaker.cpp  ArchiveMaker.h  AsyncIOTask.cpp  BinaryReader.cpp  BinaryWriter.cpp  Console.cpp  DirectoryIterator.cpp  DirectoryUtils.cpp  File.cpp  FileFinder_UNIX.h  FileManager.cpp  FileStream.cpp  FileSystem.cpp  FileSystem_Unix.cpp  FileSystem_Unix.h  FileSystem_Win32.cpp  FileSystem_Win32.h  FileUtils.cpp  MemoryStream.cpp  PathName.cpp  PathTraits.cpp  PathUtils.cpp  Process.cpp  Process_UNIX.h  Process_Unix.cpp  Process_Win32.cpp  Process_Win32.h  StreamReader.cpp  StreamWriter.cpp  StringReader.cpp  StringWriter.cpp  TextWriter.cpp
src/Json/: JsonDocument.cpp  JsonHandler.cpp  JsonReader.cpp  JsonStream.h  JsonValue.cpp  JsonWriter.cpp
src/Math/: Geometries.cpp  Matrix.cpp  Plane.cpp  Vector3.cpp
src/Platform/: Application.cpp  ApplicationBase.cpp  ApplicationBase.h  Environment_unix.cpp  Internal.h  NativeWindow.h  PlatformManager.cpp  Window.cpp  WindowBase.cpp  WindowBase.h  WindowManagerBase.cpp  WindowManagerBase.h
src/Reflection/: Notify.cpp  Property.cpp  ReflectionEventArgs.cpp  ReflectionObject.cpp  TypeInfo.cpp  Variant.cpp
src/Testing/: TestHelper.cpp  TestUtils.cpp
src/Text/: ASCIIEncoding.cpp  ASCIIEncoding.h  ConvertTable_Big5.c  ConvertTable_EUCKR.c  ConvertTable_GB2312.c  ConvertTable_SJIS.c  DBCSEncoding.cpp  DBCSEncoding.h  EUCJPEncoding.cpp  EUCJPEncoding.h  Encoding.cpp  EncodingConverter.cpp  EncodingDetector.cpp  EncodingDetector.h  SJISConvertTable.c  UTF16Encoding.cpp  UTF16Encoding.h  UTF32Encoding.cpp  UTF32Encoding.h  UTF8Encoding.cpp  UTF8Encoding.h  UnicodeUtils.cpp  Win32CodePageEncoding.cpp  Win32CodePageEncoding.h
src/Threading/: Atomic.cpp  AtomicCounter.cpp  ConditionFlag.cpp  EventFlag.cpp  Mutex.cpp  ReadWriteMutex.cpp  Semaphore.cpp  Semaphore_POSIX.h  Task.cpp  TaskScheduler.cpp  Thread.cpp  Thread_POSIX.h  Thread_Win32.h  ThreadingExceptions.cpp
src/Xml/: XmlDocument.cpp  XmlException.cpp  XmlReader.cpp  XmlWriter.cpp
test/: CMakeLists.txt  Note.txt
test/UnitTest/: Main.cpp  TestConfig.h
test/UnitTest/Base/: Test_Base.cpp  Test_Base_Array.cpp  Test_Base_ByteBuffer.cpp  Test_Base_Cache.cpp  Test_Base_Delegate.cpp  Test_Base_Diff.cpp  Test_Base_Encoding.cpp  Test_Base_EncodingDetector.cpp  Test_Base_Encoding_UTF8.cpp  Test_Base_Enum.cpp  Test_Base_Enumerable.cpp  Test_Base_Environment.cpp  Test_Base_Event.cpp  Test_Base_Exception.cpp  Test_Base_Formatter.cpp  Test_Base_List.cpp  Test_Base_Locale.cpp  Test_Base_Point.cpp  Test_Base_Rect.cpp  Test_Base_Regex.cpp  Test_Base_Resource.cpp  Test_Base_STLUtils.cpp  Test_Base_Size.cpp  Test_Base_SortedArray.cpp  Test_Base_String.cpp  Test_Base_StringArray.cpp  Test_Base_StringRef.cpp  Test_Base_StringTraits.cpp  Test_Base_StringUtils.cpp  Test_Base_UTF32Encoding.cpp  Test_Base_UnicodeUtils.cpp  Test_Base_WeakRefPtr.cpp  Test_Serialization.cpp
test/UnitTest/Base/TestData/: SJISConvertTable_test_UTF16.txt
test/UnitTest/Fluorite/: Test_Parser_CppLexer.cpp  Test_Parser_Preprocessor.cpp  Test_Parser_RpnEvaluator.cpp  Test_Parser_RpnParser.cpp
test/UnitTest/IO/: Test_IO_ASync.cpp  Test_IO_ArchiveMaker.cpp  Test_IO_BinaryReader.cpp  Test_IO_File.cpp  Test_IO_FileStream.cpp  Test_IO_FileSystem.cpp  Test_IO_FileUtils.cpp  Test_IO_MemoryStream.cpp  Test_IO_PathName.cpp  Test_IO_PathTraits.cpp  Test_IO_Process.cpp  Test_IO_StreamReader.cpp  Test_IO_TextWriter.cpp
test/UnitTest/Json/: Test_Json_JsonDocument.cpp  Test_Json_JsonReader.cpp  Test_Json_JsonValue.cpp  Test_Json_JsonWriter.cpp
test/UnitTest/Json/TestData/: ReaderTest1.txt
test/UnitTest/Math/: Test_Matrix.cpp  Test_Plane.cpp  Test_Quaternion.cpp  Test_Vector3.cpp  Test_ViewFrustum.cpp
test/UnitTest/Platform/: Test_Platform_Application.cpp
test/UnitTest/Reflection/: Test_Reflection_ReflectionObject.cpp  Test_Reflection_Variant.cpp
test/UnitTest/Text/: Test_Text_DBCSEncoding.cpp  Test_Text_EUCJPEncoding.cpp  Test_Text_EncodingConverter.cpp  Test_Text_EncodingDetector.cpp  Test_Text_UTF16Encoding.cpp  Test_Text_UTF32Encoding.cpp  Test_Text_UTF8Encoding.cpp
test/UnitTest/Threading/: Test_Threading_Atomic.cpp  Test_Threading_EventFlag.cpp  Test_Threading_Semaphore.cpp  Test_Threading_Task.cpp  Test_Threading_Thread.cpp
test/UnitTest/Xml/: Test_Xml.cpp  Test_Xml_XmlReader.cpp  Test_Xml_XmlWriter.cpp
test/UnitTest/Xml/TestData/: ReaderExample1.xml
test/gtest/src/: gtest_main.cc
(+79 files in other folders)
